@@ -21,6 +21,8 @@ Features pruned so far and rationale:
 - Popup for undo close tab action. The popup was not present in initial versions of easyGestures. Furthermore, its presence was inconsistent with the name of this action and with the behaviour of Firefox's Ctrl/Cmd-Shift-T shortcut.
 - Input box for entering URLs. This feature duplicates Firefox's location bar.
 - Linear menu. easyGestures is about a pie menu.
-- Translate/explain action. A proper solution for translating a word from any language to any other language seems to be outside the scope of this extension. Explaining a term can be done via a search query.
+- Translate/Explain action. A proper solution for translating a word from any language to any other language seems to be outside the scope of this extension. Explaining a term can be done via a search query.
 - Own search engines. This features duplicates Firefox's search engines.
-- Highlight/clear action. Although it only offers one highlighting color, Firefox offers this feature in its find bar.
+- Highlight/Clear action. Although it only offers one highlighting color, Firefox offers this feature in its find bar.
+- Default, locale dependent bookmarks for Daily Readings action. They need to be maintained.
+- Popup for Daily Readings action. Opening a specific bookmark is better achieved by a Load URL action.
